<resources>
    <string name="app_name">Spain BBowl</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_password">Password</string>
    <string name="login_go_login">Back</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="invalid_passwords">Password not the same</string>
    <string name="login_sign_up_correctly_msg">An email has been sent to you. Please, confirm before sign in.</string>
    <string name="login_sign_up_error_msg">An unexpected error occurred, please try again.</string>
    <string name="login_sign_up_error_data_msg">Please fill all the fields and confirm the password</string>
    <string name="login_sign_in_error_user_msg">The user does not exist, check the fields and try again</string>
    <string name="login_sign_in_error_user_not_verified_msg">Confirm your email before logging in</string>
    <string name="login_log_out">Log Out</string>


    <!-- Navigation Bar -->
    <string name="open_drawer">Navigation Drawer is open</string>
    <string name="close_drawer">Navigation Drawer is close</string>
    <string name="nav_item_shifts">Shifts</string>
    <string name="nav_item_dices">Dices</string>
    <string name="nav_item_passes">Passes</string>
    <string name="nav_item_skills">Skills</string>
    <string name="nav_item_tables">Tables</string>

    <!-- shiftsFragment -->
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="shift">Shift</string>
    <string name="shift_settings">Settings</string>
    <string name="alert_game_started">You cannot change preferences if the game is started.</string>

    <!-- dicesFragment -->
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="result">Result</string>

    <!-- tablesFragment -->
    <string name="weather_table">WEATHER TABLE</string>
    <string name="casualty_table">CASUALTY TABLE</string>


    <!-- Dialogs -->
    <string name="accept">OK</string>
    <string name="shift_finished_dialog_message">Your turn is over</string>
    <string name="shift_reset_dialog_message">Are you sure you want to restart the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_finished">Game finished</string>

    <!-- preferences -->
    <string name="player1_name">Player 1 name</string>
    <string name="player2_name">Player 2 name</string>
    <string name="shift_time">Time per shift (minutes)</string>
    <string name="shifts_number">Shifts (Quantity)</string>

</resources>