<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_timer"
            android:title="@string/nav_item_shifts"
            android:icon="@drawable/ic_shifts"/>
        <item android:id="@+id/nav_dices"
            android:title="@string/nav_item_dices"
            android:icon="@drawable/ic_dices"/>
        <item android:id="@+id/nav_skills"
            android:title="@string/nav_item_skills"
            android:icon="@drawable/ic_skills"/>
        <item android:id="@+id/nav_tables"
            android:title="@string/nav_item_tables"
            android:icon="@drawable/ic_tables"/>
    </group>
</menu>