<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".fragments.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"> <!-- android:focusableInTouchMode="true" para evitar que se abra el teclado al iniciar la actividad -->

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/edittext_rounded_enabled"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/edittext_rounded_enabled"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/edittext_rounded_enabled"
                android:hint="@string/login_confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/button_ripple_bg"
                android:textColor="@color/button_text"
                android:text="@string/action_sign_up"
                android:textSize="@dimen/login_text_xl_size"
                app:layout_constraintBottom_toTopOf="@+id/buttonGoLogIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />



            <Button
                android:id="@+id/buttonGoLogIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:background="@drawable/button_ripple"
                android:text="@string/login_go_login"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>