<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ShiftsFragment"
    android:keepScreenOn="true">


    <androidx.cardview.widget.CardView android:id="@+id/cardViewPlayer1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        card_view:cardBackgroundColor="@color/background"
        card_view:cardMaxElevation="2dp"
        card_view:cardCornerRadius="30dp">

        <TextView
            android:id="@+id/textViewNameP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/player1"
            android:textColor="@color/primary_variant"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/textViewTimeP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="04:00"
            android:textColor="@color/primary_variant"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/textViewShiftP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/shift"
            android:textColor="@color/primary_variant"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/linearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <Button android:id="@+id/btnPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_ripple_bg"
            android:textColor="@color/button_text"
            android:textSize="@dimen/login_text_xl_size"
            android:text="@string/pause"
            android:enabled="false"/>
        <Button android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_ripple_bg"
            android:textColor="@color/button_text"
            android:textSize="@dimen/login_text_xl_size"
            android:text="@string/reset"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView android:id="@+id/cardViewPlayer2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        card_view:cardBackgroundColor="@color/background"
        card_view:cardMaxElevation="2dp"
        card_view:cardCornerRadius="30dp">

        <TextView
            android:id="@+id/textViewNameP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player2"
            android:textColor="@color/primary_variant"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textViewTimeP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="04:00"
            android:textColor="@color/primary_variant"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/textViewShiftP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shift"
            android:textColor="@color/primary_variant"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"/>
    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>